Prepare dark mode

--- a/Resources.qrc
+++ b/Resources.qrc
@@ -6,6 +6,7 @@
 	<file>resources\img\icons\arrow-left.svg</file>
 	<file>resources\img\icons\arrow-right.svg</file>
 	<file>resources\img\icons\clock.svg</file>
+	<file>resources\img\icons\eye.svg</file>
 	<file>resources\img\icons\grid.svg</file>
 	<file>resources\img\icons\monitor.svg</file>
 	<file>resources\img\icons\smile.svg</file>
