--- a/Resources.qrc
+++ b/Resources.qrc
@@ -9,6 +9,7 @@
 	<file>resources\img\icons\eye.svg</file>
 	<file>resources\img\icons\grid.svg</file>
 	<file>resources\img\icons\monitor.svg</file>
+	<file>resources\img\icons\save.svg</file>
 	<file>resources\img\icons\smile.svg</file>
 	<file>resources\img\icons\twitch.svg</file>
 	<file>resources\ui\gui.ui</file>
